--- a/timetable.tex
+++ b/timetable.tex
@@ -25,14 +25,14 @@
 \def\bluevrule{\color[HTML]{BBDAFF}\vrule width1pt}
 
 
-\newcommand{\ipaDay}{5}
+\newcommand{\ipaDay}{1}
 \newcommand{\restDays}{3}
 
 \newcommand{\hoursPerDay}{8}
 \newcommand{\minutesPerHour}{60}
 
 \newcommand{\blockSize}{30}
-\newcommand{\blockAmount}{\number\numexpr \number\hoursPerDay* \number\minutesPerHour/\number\blockSize\relax}
+\newcommand{\blockAmount}{\number\numexpr \number\hoursPerDay * \number\minutesPerHour * \number\ipaDay / \number\blockSize\relax}
 \newcommand{\headerColsAmount}{\number\numexpr \number\blockAmount+1\relax}
 
 
@@ -40,26 +40,39 @@
 \cs_new_eq:NN \Repeat\prg_replicate:nn
 \ExplSyntaxOff{}
 
-\newcommand{\aDay}[1]{%
+\newcommand{\aDay}[1]{
   \Repeat{\blockAmount}{& \makecell{\blockSize}}
 }
+
 \newcounter{currentPlannedHours}
 \setcounter{currentPlannedHours}{0}
+
+\newcounter{currentDoneHours}
+\setcounter{currentDoneHours}{0}
+
+
+\newcommand{\timeslot}[3]{
+  \ifnum\number#1>0
+    \emptycells{\number#1} 
+  \fi
+
+  \Greencells{#2}{#2} &
+  \emptycells{#3} 
+}
 
 
 \newcommand{\task}[3]{
   \\\hhline{*{\headerColsAmount}{-}}
   #1
   &
-  % \number\thecurrentPlannedHours
-  \ifnum\number\thecurrentPlannedHours>0
-    \emptycells{\number\thecurrentPlannedHours} 
-  \fi
 
-  \Greencells{#2}{#2} &
-  \emptycells{\numexpr\number\blockAmount-\number\thecurrentPlannedHours-#2-1\relax} 
+  \timeslot{\number\thecurrentPlannedHours}{#2}{\numexpr\number\blockAmount-\number\thecurrentPlannedHours-#2-1\relax}
+  \\
+  \emptycells{} &
+  \timeslot{\number\thecurrentDoneHours}{#3}{\numexpr\number\blockAmount-\number\thecurrentDoneHours-#3-1\relax}
+
   \addtocounter{currentPlannedHours}{\number#2}
-  % \hhline{*{10}{-}>{\arrayrulecolor[HTML]{BBDAFF}}->{\arrayrulecolor{black}}*{8}{-}}
+  \addtocounter{currentDoneHours}{\number#3}
 }
 
 
@@ -81,8 +94,6 @@
 \label{my-label}
 \begin{tabular}{!{\thickvrule}Sc!{\thickvrule} *{8}{Sc!{\bluevrule}}
 Sc!{\bluevrule}>{\columncolor[HTML]{BBDAFF}}Sc!{\bluevrule}*{7}{Sc!{\bluevrule}}Sc!{\thickvrule}}
-% \hhline{*{\headerColsAmount}{-}}
-% \multicolumn{\headerColsAmount}{!{\thickvrule}Sc!{\thickvrule}}{\cellcolor[HTML]{FFCC67}{\Huge Student Meeting Times and Schedule : Jan--July 2016}}\\
 
 
 
@@ -90,11 +101,11 @@ Sc!{\bluevrule}>{\columncolor[HTML]{BBDAFF}}Sc!{\bluevrule}*{7}{Sc!{\bluevrule}}
 
 
 \hhline{*{\headerColsAmount}{-}}
-\aDay{}
+\aDay{} % could probably take hoursPerDay as an argument and date
 
-\task{test}{1}{2}
-\task{123}{1}{2}
-\task{456}{2}{2}
+\task{test}{2}{4}
+\task{123}{2}{4}
+\task{456}{2}{4}
 % \\
 % \hhline{*{10}{-}>{\arrayrulecolor[HTML]{BBDAFF}}->{\arrayrulecolor{black}}*{8}{-}}
 
