--- a/commands.tex
+++ b/commands.tex
@@ -17,7 +17,7 @@
 
 
 \newcommand{\aDay}[1]{
-  \Repeat{\blockAmount}{& \makecell{\blockSize}}
+  \Repeat{\blockAmountPerIpaDay}{& \makecell{\blockSize}}
 }
 
 \newcommand{\aDayHeader}[1]{
@@ -39,10 +39,10 @@
   #1
   &
 
-  \timeslot{\number\thecurrentPlannedHours}{#2}{\numexpr\number\blockAmount-\number\thecurrentPlannedHours-\number#2-1\relax}
+  \timeslot{\number\thecurrentPlannedHours}{#2}{\numexpr\number\blockAmount-\number\thecurrentPlannedHours- (#2) -1\relax}
   \\
   \emptycells{} &
-  \timeslot{\number\thecurrentDoneHours}{#3}{\numexpr\number\blockAmount-\number\thecurrentDoneHours-\number#3-1\relax}
+  \timeslot{\number\thecurrentDoneHours}{#3}{\numexpr\number\blockAmount-\number\thecurrentDoneHours- (#3) -1\relax}
 
   \addtocounter{currentPlannedHours}{\number#2}
   \addtocounter{currentDoneHours}{\number#3}
