add poc for timetable

--- a/commands.tex
+++ b/commands.tex
@@ -20,7 +20,7 @@
   \Repeat{\blockAmountPerIpaDay}{& \makecell{\blockSize}}
 }
 
-\newcommand{\aDayHeader}[1]{
+\newcommand{\ipaDayHeader}[1]{
   \multicolumn{\blockAmountPerIpaDay}{c}{#1}
 }
 
