--- a/commands.tex
+++ b/commands.tex
@@ -29,6 +29,7 @@
   \ifnum\number#1>0
     \emptycells{\number#1} 
   \fi
+  % \createIsWorkdayCommand{1}
 
   \Greencells{#2}{#2} &
   \emptycells{#3} 
