--- a/timetable.tex
+++ b/timetable.tex
@@ -27,20 +27,28 @@
 \NewDocumentEnvironment{Timetable}{md<>O{c}mO{\nocols}}
 {%
     \begin{#1}[#3]{#4}
-    \noalign{\CountColumns{#5}}
+    % \noalign{\createIsWorkdayCommand{#5}{#4}}
 }
 {\end{#1}}
 
-\ExplSyntaxOn
-% Change this to iterate over #4 of Timetable and return true if column is of type I
-\NewDocumentCommand{\CountColumns}{m}
- {% count the number of & tokens in \@preamble
-  \regex_count:nvN { \cT\& } { @preamble } \l_tmpa_int
-  % they're one less than the columns
-  \cs_gset:Npx #1 { \int_eval:n { 1 + \l_tmpa_int } }
- }
-\cs_generate_variant:Nn \regex_count:nnN { nv }
-\ExplSyntaxOff
+% \ExplSyntaxOn
+
+% \NewDocumentCommand{\createIsWorkdayCommand}{mm}
+%  {
+%     #2
+%     % Split the header specification string (#2) into a sequence using space as delimiter.
+%     \seq_set_split:Nnn \l_tmpa_seq { ~ } { #2 }
+%     % Compare the element at index #3 with I.
+    
+%    \cs_new:Npn \createIsWorkdayCommand:m{ \str_if_eq:nnTF { \seq_item:Nn \l_tmpa_seq {#2} } { I } {Ipa} {Ferie}}
+
+%   % #1 is \noColls which originates from Timetable
+%   % update this line so the current #2 (the header args) gets passed and then the function should take an argument and should return if the
+%   % index of the string(header args) split by " " is A
+%     %   \cs_gset:Npx #1 { \int_eval:n { 1 + \l_tmpa_int } }
+%  }
+% % \cs_generate_variant:Nn \regex_count:nnN { nv }
+% \ExplSyntaxOff
 
 \definecolor{Gray}{gray}{0.85}
 % Define a column type for the first column: a centered column with a thick vertical rule on both sides.
@@ -74,7 +82,7 @@
     % Sc!{\bluevrule}>{\columncolor[HTML]{BBDAFF}}Sc!{\bluevrule}*{1}{Sc!{\bluevrule}}Sc!{\thickvrule}
 \hline
 % \aDay{} % could probably take hoursPerDay as an argument and date
-\blockAmountPerIpaDay ,   \nocols &
+\blockAmountPerIpaDay  &
 \ipaDayHeader{1.1.1970} &
 \ipaDayHeader{1.1.1970}
 \\
@@ -86,6 +94,8 @@
 \task{123}{2}{4}
 \task{456}{2}{4}
 \task{456}{2}{4}
+\hline
+
 % \\
 % \hhline{*{10}{-}>{\arrayrulecolor[HTML]{BBDAFF}}->{\arrayrulecolor{black}}*{8}{-}}
 
