try to add utility function isWorkday

--- a/commands.tex
+++ b/commands.tex
@@ -29,7 +29,8 @@
   \ifnum\number#1>0
     \emptycells{\number#1} 
   \fi
-  % \createIsWorkdayCommand{1}
+  \isWorkday:n{1}
+  % \huii{2}{3}
 
   \Greencells{#2}{#2} &
   \emptycells{#3} 
