--- a/timetable.tex
+++ b/timetable.tex
@@ -24,31 +24,45 @@
 \usepackage{array} % needed for \newcolumntype
 \usepackage{array,xparse}
 
-\NewDocumentEnvironment{Timetable}{md<>O{c}mO{\nocols}}
+
+
+\NewDocumentEnvironment{Timetable}{md<>O{c}mO{\isWorkday:n}}
 {%
     \begin{#1}[#3]{#4}
-    % \noalign{\createIsWorkdayCommand{#5}{#4}}
+    \createIsWorkdayCommand{#5}{#4}
 }
 {\end{#1}}
 
-% \ExplSyntaxOn
+\ExplSyntaxOn
+\NewDocumentCommand{\createIsWorkdayCommand}{mm}
+  { 
+        % Split the header specification string (#2) into a sequence using space as a delimiter.
+        
 
-% \NewDocumentCommand{\createIsWorkdayCommand}{mm}
-%  {
-%     #2
-%     % Split the header specification string (#2) into a sequence using space as delimiter.
-%     \seq_set_split:Nnn \l_tmpa_seq { ~ } { #2 }
-%     % Compare the element at index #3 with I.
-    
-%    \cs_new:Npn \createIsWorkdayCommand:m{ \str_if_eq:nnTF { \seq_item:Nn \l_tmpa_seq {#2} } { I } {Ipa} {Ferie}}
+        % Debugging: Print the second element (should print "A" if it's there).
+        % \seq_item:Nn \g_workday_seq { 2 } 
+        % \str_if_eq:eeTF { \seq_item:Nn \g_workday_seq { 2 } } { A } { Ipa } { Ferie }
+        % \str_if_eq:eeTF { \seq_item:Nn \g_workday_seq { 3 } } { A } { Ipa } { Ferie }
+        
+        % Define a command that takes an index and returns whether the value at that index is "A".
+        % \NewDocumentCommand{\huii}{mm}{first: #1, second: #2}
+  
+        \cs_gset:Npx #1 ##1{
+        
+        (Head: #2)
+        (index: ##1)
+        \seq_set_split:Nnn \l_workday_seq { ~ } { #2 }
+        % Debugging output to verify input
+        (value: \seq_item:Nn \l_workday_seq { ##1 })
 
-%   % #1 is \noColls which originates from Timetable
-%   % update this line so the current #2 (the header args) gets passed and then the function should take an argument and should return if the
-%   % index of the string(header args) split by " " is A
-%     %   \cs_gset:Npx #1 { \int_eval:n { 1 + \l_tmpa_int } }
-%  }
-% % \cs_generate_variant:Nn \regex_count:nnN { nv }
-% \ExplSyntaxOff
+        % Compare the extracted value with "A"
+        \str_if_eq:eeTF { \seq_item:Nn {\l_workday_seq} { ##1 } } { A } { Ipa } { Ferie }
+      }
+      % \isWorkdayCommand{1}
+  }
+
+ \ExplSyntaxOff
+
 
 \definecolor{Gray}{gray}{0.85}
 % Define a column type for the first column: a centered column with a thick vertical rule on both sides.
@@ -82,7 +96,7 @@
     % Sc!{\bluevrule}>{\columncolor[HTML]{BBDAFF}}Sc!{\bluevrule}*{1}{Sc!{\bluevrule}}Sc!{\thickvrule}
 \hline
 % \aDay{} % could probably take hoursPerDay as an argument and date
-\blockAmountPerIpaDay  &
+  &
 \ipaDayHeader{1.1.1970} &
 \ipaDayHeader{1.1.1970}
 \\
