--- a/commands.tex
+++ b/commands.tex
@@ -29,8 +29,11 @@
   \ifnum\number#1>0
     \emptycells{\number#1} 
   \fi
+  % \isWorkday:n{0}
+  % \isWorkday{1}
   \isWorkday:n{1}
-  % \huii{2}{3}
+  % \isWorkday:n{2}
+  % \isWorkday:n{3}
 
   \Greencells{#2}{#2} &
   \emptycells{#3} 
