--- a/timetable.tex
+++ b/timetable.tex
@@ -25,19 +25,49 @@
 \usepackage{array,xparse}
 \usepackage{listofitems}
 \usepackage{multirow}
+\usepackage{pgffor}
 
-\newcommand\splitarg[1]{%
-  \setsepchar{ }%
-  \readlist\myarg{#1}%
-}
 
-\NewDocumentEnvironment{Timetable}{md<>O{c}mO{\isWorkday:n}}
-{%
-    \begin{#1}[#3]{#4}
-    \createIsWorkdayCommand{#5}{#4}
-}
-{\end{#1}}
+
+
+
+\usepackage{cellspace}
+\setlength\cellspacetoplimit{1ex}
+\setlength\cellspacebottomlimit{1ex}
+\def\thickvrule{\vrule width 1.5mm}
+\def\bluevrule{\color[HTML]{BBDAFF}\vrule width1pt}
+
+\input{commands.tex}
+
 \ExplSyntaxOn
+
+\cs_gset:Npn \runForDays #1#2#3
+{
+  \seq_set_split:Nnn \l_tmpa_seq { ~ } { #1 }
+  \seq_map_inline:Nn \l_tmpa_seq
+    {
+      \str_case:nn {##1}
+        {
+          {A}{#2}
+          {H}{#3}
+        }
+    }
+}
+
+\cs_gset:Npn \createDayTimeSlots #1
+{
+  \runForDays{#1}{\aDay{123}}{0 &}
+}
+
+\cs_gset:Npn \createDayHeader #1
+{
+  \runForDays{#1}{\ipaDayHeader{123}}{\holidyDayHeader{}}
+}
+
+\cs_gset:Npn \calcDays #1
+{
+  \runForDays{#1}{\addIpaDay}{\addRestDay}
+}
 
 % Declare a global sequence to hold workday values
 \seq_new:N \g_workday_seq
@@ -60,27 +90,34 @@
 
 
 
+\NewDocumentEnvironment{Timetable}{md<>O{c}mO{\isWorkday:n}}
+{
+    \calcDays{#4}
+    \begin{#1}[#3]{I #4}
+    & \createDayHeader{#4}
+    & \createDayTimeSlots{#4}
+      
+    \createIsWorkdayCommand{#5}{#4}
+}
+{\end{#1}}
+
+
+
+
+
 \definecolor{Gray}{gray}{0.85}
 % Define a column type for the first column: a centered column with a thick vertical rule on both sides.
 \newcolumntype{I}{!{\thickvrule}c!{\thickvrule}}
 
 
-\newcolumntype{A}{*{\blockAmountPerIpaDay}{c!{\bluevrule}}}
+\newcolumntype{A}{*{\blockAmountPerIpaDay}{p{0.4cm}!{\bluevrule}}}
 
-\newcolumntype{H}{>{\columncolor{Gray}}c}
+\newcolumntype{H}{>{\columncolor{Gray}}c@{}}
 
 
 
-\usepackage{cellspace}
-\setlength\cellspacetoplimit{1ex}
-\setlength\cellspacebottomlimit{1ex}
-\def\thickvrule{\vrule width 1.5mm}
-\def\bluevrule{\color[HTML]{BBDAFF}\vrule width1pt}
+% \parindent=0cm
 
-\input{commands.tex}
-
-\newcouterinit[2]{ipaDays}
-\newcouterinit[0]{restDays}
 
 \begin{document}
 \setlength\Lstackgap{1cm}
@@ -88,14 +125,13 @@
 
 \input{vars.tex}
 \begin{table}[]\label{my-label}
-\begin{Timetable}{tabular}{I A}
+\begin{Timetable}{tabular}{A A H}
     % Sc!{\bluevrule}>{\columncolor[HTML]{BBDAFF}}Sc!{\bluevrule}*{1}{Sc!{\bluevrule}}Sc!{\thickvrule}
 % \aDay{} % could probably take hoursPerDay as an argument and date
-&
-\ipaDayHeader{1.1.1970} &
+% \ipaDayHeader{1.1.1970}
+% \ipaDayHeader{1.1.1970}
 % \holyDayHeader{1.1.1970} &
 % \ipaDayHeader{1.1.1970}
-
 % \aDay{} % could probably take hoursPerDay as an argument and date
 % \aDay{} % could probably take hoursPerDay as an argument and date
 
