header gets built dynamically

--- a/commands.tex
+++ b/commands.tex
@@ -23,11 +23,11 @@
 }
 
 \newcommand{\ipaDayHeader}[1]{
-  % \blockAmountPerIpaDay
-  \multicolumn{32}{|c|}{A day}
+  &
+  \multicolumn{\blockAmountPerIpaDay}{c}{#1 t}
 }
 \newcommand{\holidyDayHeader}{
-  Frei &
+  & Frei
 }
 
 
