--- a/tex3.tex
+++ b/tex3.tex
@@ -16,7 +16,7 @@
 
 \cs_gset:Npn \createDayTimeSlots #1
 {
-  \runForDays{#1}{\aDay{123}}{0 &}
+  \runForDays{#1}{\aDay{123}}{& 0}
 }
 
 \cs_gset:Npn \createDayHeader #1
