--- a/timetable.tex
+++ b/timetable.tex
@@ -73,23 +73,12 @@
 
 \input{vars.tex}
 \begin{table}[]\label{my-label}
-\begin{Timetable}{tabular}{A H A}
-    % Sc!{\bluevrule}>{\columncolor[HTML]{BBDAFF}}Sc!{\bluevrule}*{1}{Sc!{\bluevrule}}Sc!{\thickvrule}
-% \aDay{} % could probably take hoursPerDay as an argument and date
-% \ipaDayHeader{1.1.1970}
-% \ipaDayHeader{1.1.1970}
-% \holyDayHeader{1.1.1970} &
-% \ipaDayHeader{1.1.1970}
-% \aDay{} % could probably take hoursPerDay as an argument and date
-% \aDay{} % could probably take hoursPerDay as an argument and date
-\task{123}{2}{4}
-% \task{456}{2}{4}
-% \task{456}{2}{4}
-% % \task{098}{2}{4}
-% \hline
+\begin{Timetable}{tabular}{A H A H H A}
 
-% \\
-% \hhline{*{10}{-}>{\arrayrulecolor[HTML]{BBDAFF}}->{\arrayrulecolor{black}}*{8}{-}}
+\task{reaching}{8}{8}
+\task{reaching}{8}{8}
+\task{starting}{4}{4}
+\task{suprpassing}{16}{16}
 
 % Tue
 % & \multicolumn{3}{c}{\cellcolor[HTML]{FFFC9E}\color{IndianRed3}E 2 : Class} 
